# BeardEngine

./: BeardEngine  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO.txt  bind.cfg  cmake_install.cmake  var.cfg
client/: CMakeLists.txt  Makefile  client  cmake_install.cmake
server/: CMakeLists.txt  Makefile  cmake_install.cmake  server
src/: client.c  client.cpp  client.h  client_input.h  collision.c  collision.cpp  command.c  command.cpp  command.h  common.c  common.cpp  common.h  console.c  console.h  cvar.c  cvar.cpp  entity.cpp  event.c  event.cpp  file.c  file.cpp  game.c  game.cpp  hero.h  input.c  interface.h  key_event.c  keys.c  keys.cpp  keys.h  main.c  main.cpp  network.c  packets.h  platform.h  render.c  render.cpp  server.c  server.cpp  server.h  (+3 more)
src/engine/: client.h  console.cpp  console.h  core.cpp  core.h  game.h  interface.h  system.h  variable.h
src/game/: client.cpp  client.h  main.cpp
